[gd_scene load_steps=8 format=3 uid="uid://uesmno8s2ult"]

[ext_resource type="PackedScene" uid="uid://18hqcc48bipb" path="res://FUZ/FuzMinigame2/player.tscn" id="1_3ye41"]
[ext_resource type="Script" path="res://FUZ/FuzMinigame2/game.gd" id="1_crokp"]
[ext_resource type="Texture2D" uid="uid://b80ybc65ur48g" path="res://FUZ/FuzMinigame2/lily-pad.png" id="2_uv82p"]
[ext_resource type="Texture2D" uid="uid://2thekh2dtvx" path="res://FUZ/FuzMinigame2/lily-pad-2.png" id="3_kmw87"]
[ext_resource type="PackedScene" uid="uid://8gmqeincxksf" path="res://FUZ/FuzMinigame2/boundary.tscn" id="3_tfimw"]
[ext_resource type="PackedScene" uid="uid://bdtq36c8fuj11" path="res://FUZ/FuzMinigame2/game_area.tscn" id="4_u7e3t"]
[ext_resource type="PackedScene" uid="uid://c5wvyikarycgc" path="res://FUZ/FuzMinigame2/strider.tscn" id="7_2optf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_crokp")

[node name="Player" parent="." instance=ExtResource("1_3ye41")]
collision_layer = 5

[node name="GameCenter" type="Marker2D" parent="."]

[node name="GameArea" parent="GameCenter" instance=ExtResource("4_u7e3t")]

[node name="Boundary" parent="GameCenter" instance=ExtResource("3_tfimw")]

[node name="LilyPads" type="Node2D" parent="."]

[node name="Lily-pad" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-301, 117)
scale = Vector2(2, 2)
texture = ExtResource("2_uv82p")

[node name="Lily-pad4" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-19, 93)
scale = Vector2(2, 2)
texture = ExtResource("2_uv82p")

[node name="Lily-pad5" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(161, 121)
scale = Vector2(2, 2)
texture = ExtResource("2_uv82p")

[node name="Lily-pad7" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(96, -136)
scale = Vector2(2, 2)
texture = ExtResource("2_uv82p")

[node name="Lily-pad3" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-308, -71)
scale = Vector2(2, 2)
texture = ExtResource("2_uv82p")

[node name="Lily-pad-2" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-220, 123)
scale = Vector2(2, 2)
texture = ExtResource("3_kmw87")

[node name="Lily-pad-4" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-153, -143)
scale = Vector2(2, 2)
texture = ExtResource("3_kmw87")

[node name="Lily-pad-5" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(218, 63)
scale = Vector2(2, 2)
texture = ExtResource("3_kmw87")

[node name="Lily-pad-6" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(235, -116)
scale = Vector2(2, 2)
texture = ExtResource("3_kmw87")

[node name="Lily-pad-3" type="Sprite2D" parent="LilyPads"]
z_index = -1
position = Vector2(-235, -159)
scale = Vector2(2, 2)
texture = ExtResource("3_kmw87")

[node name="BubbleReload" type="Timer" parent="."]
autostart = true

[node name="Strider" parent="." instance=ExtResource("7_2optf")]
position = Vector2(-135, 168)

[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="BubbleReload" to="." method="_on_bubble_reload_timeout"]
[connection signal="strider_shoot" from="Strider" to="." method="_on_strider_strider_shoot"]
